# PersonalityGeneratorRust-V2

./: .gitignore  Cargo.toml  LICENSE  README.md  人格碎片生成器.txt
crates/paps-core/: Cargo.toml
crates/paps-core/examples/: demo.rs  demo2.rs  stress_test.rs  theory_test.rs
crates/paps-core/src/: error.rs  generator.rs  lib.rs  profile.rs  report.rs  reversal.rs  seed.rs  types.rs
crates/paps-core/src/coupling/: emergence.rs  mod.rs  rules.rs
crates/paps-core/src/drift/: age_drift.rs  habituation.rs  mod.rs  training.rs
crates/paps-core/src/params/: domain_a.rs  domain_b.rs  domain_c.rs  domain_d.rs  domain_e.rs  domain_f.rs  domain_g.rs  domain_h.rs  mod.rs
crates/paps-core/src/phase_change/: mod.rs  triggers.rs
crates/paps-core/src/relation_collapse/: mod.rs  relation_types.rs
crates/paps-wasm/: Cargo.toml
crates/paps-wasm/src/: lib.rs
ts-test/: debug_det.mjs  full_report.mjs  package.json  personality_full_report.txt  personality_report.txt  report.mjs  report_clean.mjs  test.mjs  theory_test.mjs
